--- a/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/LakesList/LakeListPage.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/LakesList/LakeListPage.xaml
@@ -5,38 +5,25 @@
              x:Class="FishOn.LakeListPage"
              Title="Select Lake">
   
-  <StackLayout>
-      <Label Text="Enter lake names, seperated by commas"></Label>
-      <StackLayout Orientation="Horizontal">
-         <Entry Text="{Binding NewLakeNamesSeperatedByComma}" Placeholder="Lake Names (Pine, Christmas)"></Entry>
-         <Button Text="+" Command="{Binding AddNewLakesCommand}"></Button>
-      </StackLayout>
-
-    <ListView HasUnevenRows="True" x:Name="lakesList"
-                ItemsSource="{Binding LakesList}" >
-      <ListView.ItemTemplate>
-        <DataTemplate>
-          <ViewCell>
-            <StackLayout>
-              <Button Text="{Binding LakeName}"
-                      Command="{Binding Path=BindingContext.LakeSelectedCommand, 
-                             Source={viewModel:ElementSource lakesList}}"
-                      CommandParameter="{Binding}"/>
-            </StackLayout>
-          </ViewCell>
-        </DataTemplate>
-      </ListView.ItemTemplate>
-    </ListView>
-   
-    <StackLayout Orientation="Horizontal">
-      <Label Text="Lake Selected:"></Label>
-      <Label Text="{Binding SelectedLake.LakeName}"></Label>
-    </StackLayout>
+ 
+  <AbsoluteLayout>
+      <StackLayout x:Name="mainLayout" AbsoluteLayout.LayoutBounds="1,1,1,1" AbsoluteLayout.LayoutFlags="All">
+        <ScrollView>
+          <StackLayout x:Name="lakesBtnContainer"></StackLayout>
+        </ScrollView>
     
-    <StackLayout Orientation="Horizontal">
-      <Label Text="Water Temp?"></Label>
-      <Entry Text="{Binding WaterTemp}" Placeholder="Water Temp?"></Entry>
+        <StackLayout Orientation="Horizontal">
+          <Label Text="Lake Selected:"></Label>
+          <Label Text="{Binding SelectedLake.LakeName}"></Label>
+        </StackLayout>
+       
+        <StackLayout Orientation="Horizontal">
+          <Label Text="Water Temp?"></Label>
+          <Entry Text="{Binding WaterTemp}" Placeholder="Water Temp?"></Entry>
+        </StackLayout>
+
     </StackLayout>
-    <Button Text="Start Trip" Command="{Binding SetSessionDataCommand}"></Button>
-  </StackLayout>
+
+  </AbsoluteLayout>
+  
 </ContentPage>
