--- a/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/MyData/MyDataListPage.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/MyData/MyDataListPage.xaml
@@ -4,7 +4,7 @@
             xmlns:wayPoints="clr-namespace:FishOn.ProvisioningPages.WayPoints;assembly=FishOnMobileApp"
             xmlns:tackleBox="clr-namespace:FishOn.Pages_MVs.ProvisioningPages.TackleBox;assembly=FishOnMobileApp"
             x:Class="FishOn.Pages_MVs.MyData.MyDataListPage"
-            Title="{Binding Title}"
+            Title="Data List"
             >
  
 </TabbedPage>
