--- a/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/WayPoints/WPProvisoningList.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/WayPoints/WPProvisoningList.xaml
@@ -10,12 +10,12 @@
     <Button Text="Add WP" HorizontalOptions="EndAndExpand" Command="{Binding AddWayPoint}"></Button>
   </StackLayout>
   
-  <StackLayout Padding="5,0,5,0">
+  <StackLayout Padding="0" Spacing="0" Margin="0">
     <ListView x:Name="wayPointListView" ItemsSource="{Binding WayPointList}" RowHeight="80" >
       <ListView.ItemTemplate>
         <DataTemplate>
-          <ViewCell>
-            <StackLayout Margin="5,5">
+          <ViewCell Appearing="Cell_OnAppearing">
+            <StackLayout Margin="0" Spacing="0" Padding="0">
               <StackLayout Orientation="Horizontal">
                  <StackLayout.GestureRecognizers>
                     <TapGestureRecognizer
