--- a/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/Settings/SettingsListPage.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/Settings/SettingsListPage.xaml
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FishOn.Pages_MVs.ProvisioningPages.Settings.SettingsListPage">
-  <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
+             x:Class="FishOn.Pages_MVs.ProvisioningPages.Settings.SettingsListPage"
+             Title="Settings">
+  <Grid>
+    <Image Source="fishing_rod.png" Opacity="0.3"/>
+  
+    <StackLayout x:Name="btnContainer" Spacing="0" Padding="0, 5">
+  
+    </StackLayout>
+  </Grid>
 </ContentPage>
